fix gif popup behind menu nav

--- a/src/sass/components/navigation/_navigation.scss
+++ b/src/sass/components/navigation/_navigation.scss
@@ -137,7 +137,7 @@
     left: 0;
     height: auto;
     background-color: var(--bg-color);
-    z-index: 9999;
+    z-index: 999;
 
     @include breakpoint(md) {
         position: relative;
