--- a/style.css
+++ b/style.css
@@ -2593,7 +2593,7 @@ input:checked + .slider:before {
   left: 0;
   height: auto;
   background-color: var(--bg-color);
-  z-index: 9999;
+  z-index: 999;
 }
 @media (min-width: 54rem) {
   .main-navigation {
